--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,16 @@ development:
   host: localhost
   socket: /var/run/mysqld/mysqld.sock
 
+#below is a configuration for pg databases
+#development:
+  #adapter: postgresql
+  #encoding: unicode
+  #host: localhost
+  #database: testapp_development
+  #pool: 5
+  #username: sjoerd
+  #password: blaataap
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
